# SlicerMRClass

./: CMakeLists.txt  SlicerMRClass.py
Resources/UI/: SlicerMRClass.ui
SlicerMRClass/: README.md  SlicerMRClass.py
SlicerMRClass/Resources/UI/: SlicerMRClass.ui  SlicerMRClass_orig.ui
